chore: update editor configuration and formatting rules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"files.associations": {
 		"wrangler.json": "jsonc"
-	}
+	},
+	"cSpell.words": ["AUTOINCREMENT", "healthwarehouse", "intakeq", "Lisinopril", "MERCHANTABLITY", "miniflare", "nextday"]
 }
