--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,50 +1,25 @@
-/**
- * For more details on how to configure Wrangler, refer to:
- * https://developers.cloudflare.com/workers/wrangler/configuration/
- */
 {
-	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "new-project",
-	"main": "src/index.ts",
-	"compatibility_date": "2025-09-22",
-	"compatibility_flags": [
-		"global_fetch_strictly_public"
-	],
-	"assets": {
-		// The path to the directory containing the `index.html` file to be served at `/`
-		"directory": "./public"
-	},
-	"observability": {
-		"enabled": true
-	}
-	/**
-	 * Smart Placement
-	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
-	 */
-	// "placement": { "mode": "smart" }
-	/**
-	 * Bindings
-	 * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
-	 * databases, object storage, AI inference, real-time communication and more.
-	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
-	 */
-	/**
-	 * Environment Variables
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
-	 */
-	// "vars": { "MY_VARIABLE": "production_value" }
-	/**
-	 * Note: Use secrets to store sensitive data.
-	 * https://developers.cloudflare.com/workers/configuration/secrets/
-	 */
-	/**
-	 * Static Assets
-	 * https://developers.cloudflare.com/workers/static-assets/binding/
-	 */
-	// "assets": { "directory": "./public/", "binding": "ASSETS" }
-	/**
-	 * Service Bindings (communicate between multiple Workers)
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
-	 */
-	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
+    "$schema": "node_modules/wrangler/config-schema.json",
+    "name": "healthwarehouse-worker",
+    "main": "src/index.ts",
+    "compatibility_date": "2025-09-06",
+    "compatibility_flags": ["global_fetch_strictly_public"],
+    "observability": {
+        "enabled": true
+    },
+    // DEFAULT (Development) - used with `wrangler dev` and `wrangler deploy`
+    "d1_databases": [
+        {
+            "binding": "DB",
+            "database_name": "healthwarehouse_db",
+            "database_id": "aac14f8f-4668-42ed-af97-317de8e96490"
+        }
+    ],
+    "vars": {
+        "TEST_MODE": "true",
+        "HEALTHWAREHOUSE_API_BASE_URL": "https://partners-test.healthwarehouse.com/v1"
+    },
+    "env": {
+        "production": {}
+    }
 }
